--- a/matlab/fmm3dbie_routs.mw
+++ b/matlab/fmm3dbie_routs.mw
@@ -1085,3 +1085,272 @@ function [p,varargout] = eval(S,zpars,sigma,eps,varargin)
     end
 end    
 %
+%-------------------------------------------------
+%
+%%
+%%   Maxwell pec routines
+%%
+%
+%-------------------------------------------------
+%
+@ +em3d/+pec/get_quadrature_correction.m 
+function Q = get_quadrature_correction(S,zpars,eps,targinfo,opts)
+%
+%  em3d.pec.get_quadrature_correction
+%    This subroutine returns the near quadrature correction
+%    for the chosen maxwell representation, with densities supported
+%    on the surface, and targets given by targinfo 
+%    as a cell array of sparse matrices or an array of matrices
+%    in the rsc format, where each folumn of the matrix is the
+%    representation of the sparse matrix corresponding to one
+%    of the kernels
+%
+%  Notes for this routine:
+%  The PDE takes the form
+%  1v) \nabla \times E =  ik H
+%  2v) \nabla \cdot  E =     0
+%  3v) \nabla \times H = -ik E
+%  4v) \nabla \cdot  H =     0
+%  
+%  where E is the electric field, H is the magnetic field, 
+%  and k is the wavenumber
+%
+%  The PEC boundary conditions are given by
+%  1b) n \times (E + E_in) = 0
+%  2b) n \cdot  (E + E_in) = \rho
+%  3b) n \times (H + H_in) = J
+%  4b) n \cdot  (H + H_in) = 0
+%
+%  where (E_in, H_in) are the incoming electric and magnetic 
+%  fields, \rho is the surface current, and J is the 
+%  surface current.
+% 
+%  This routine supports the following representations:
+%  * nrccie   (Non-resonant charge current integral equation)
+%  * dpie     (Decoupled potential integral equation)
+%  * mfie     (Magnetic field integral equation)
+%  * aumfie   (Augmented magnetic field integral equation)
+%  * aurcsie  (Augmented regularized combined source integral equation)
+%  * gendeb   (Generalized Debye)
+%
+%  The default quadrature corrections are for targets on surface, so they
+%  assume that if targinfo is provided, then it comes equipped with
+%  tangential derivative and normal information. 
+%
+%  The representation must be set via setting opts.int_rep.
+%  If unspecified, the default is set to nrccie
+%
+%  To obtain the corresponding post-processing/off-surface 
+%  quadrature corrections, append '-eval'
+%  to the end of the integral representation. For example, for
+%  the off-surface nrccie corrections, use opts.int_rep='nrccie-eval'
+%
+%  In the input array zpars, the first parameter must always be 
+%  the wavenumber k
+%
+%  For notes on the specific representations, boundary integral equations,
+%  and order of kernels returned by this routine, checkout
+%  em3d.pec.Contents.m
+%
+%  Syntax
+%   Q = em3d.pec.get_quadrature_correction(S,zpars,eps)
+%   Q = em3d.pec.get_quadrature_correction(S,zpars,eps,targinfo)
+%   Q = em3d.pec.get_quadrature_correction(S,zpars,eps,targinfo,opts)
+%
+%  Note: for targets on surface, only principal value part of the
+%    layer potential is returned
+%
+%  Input arguments:
+%    * S: surfer object, see README.md in matlab for details
+%    * zpars: kernel parameters
+%        zpars(1)     - wave number
+%        zpars(2:end) - additional representation dependent parameters 
+%    * eps: precision requested
+%    * targinfo: target info (optional)
+%       targinfo.r = (3,nt) target locations
+%       targinfo.du = u tangential derivative info
+%       targinfo.dv = v tangential derivative info
+%       targinfo.n = normal info
+%       targinfo.patch_id (nt,) patch id of target, = -1, if target
+%          is off-surface (optional)
+%       targinfo.uvs_targ (2,nt) local uv ccordinates of target on
+%          patch if on-surface (optional)
+%    * opts: options struct
+%        opts.int_rep - integral representation being used
+%                         Supported representations
+%                         'nrccie'
+%        opts.format  - Storage format for sparse matrices
+%                         'rsc' - row sparse compressed format
+%                         'csc' - column sparse compressed format
+%                         'sparse' - sparse matrix format
+%        opts.quadtype - quadrature type, currently only 'ggq' supported
+%
+%
+%
+
+    [srcvals,srccoefs,norders,ixyzs,iptype,wts] = extract_arrays(S);
+    [n12,npts] = size(srcvals);
+    [n9,~] = size(srccoefs);
+    [npatches,~] = size(norders);
+    npatp1 = npatches+1;
+    npp1 = npatches+1;
+    n3 = 3;
+
+    if(nargin < 4)
+      targinfo = [];
+      targinfo.r = S.r;
+      targinfo.du = S.du;
+      targinfo.dv = S.dv;
+      targinfo.n = S.n;
+      patch_id = S.patch_id;
+      uvs_targ = S.uvs_targ;
+      opts = [];
+    end
+
+    if(nargin < 5)
+      opts = [];
+    end
+
+    ff = 'rsc';
+    if(isfield(opts,'format'))
+       ff = opts.format;
+    end
+
+    if(~(strcmpi(ff,'rsc') || strcmpi(ff,'csc') || strcmpi(ff,'sparse')))
+       fprintf('invalid quadrature format, reverting to rsc format\n');
+       ff = 'rsc';
+    end
+
+
+    targs = extract_targ_array(targinfo); 
+    [ndtarg,ntarg] = size(targs);
+    ntargp1 = ntarg+1;
+    
+    if(isfield(targinfo,'patch_id') || isprop(targinfo,'patch_id'))
+      patch_id = targinfo.patch_id;
+    else
+      patch_id = zeros(ntarg,1);
+    end
+
+    if(isfield(targinfo,'uvs_targ') || isprop(targinfo,'uvs_targ'))
+      uvs_targ = targinfo.uvs_targ;
+    else
+      uvs_targ = zeros(2,ntarg);
+    end
+
+    if(length(patch_id)~=ntarg)
+      fprintf('Incorrect size of patch id in target info struct. Aborting! \n');
+    end
+
+    [n1,n2] = size(uvs_targ);
+    if(n1 ~=2 && n2 ~=ntarg)
+      fprintf('Incorrect size of uvs_targ array in targinfo struct. Aborting! \n');
+    end
+
+
+    
+    iptype0 = iptype(1);
+    norder0 = norders(1);
+    rfac = 0.0;
+    rfac0 = 0.0;
+    # FORTRAN get_rfacs(int[1] norder0, int[1] iptype0, inout double[1] rfac, inout double[1] rfac0);
+    
+
+    cms = zeros(3,npatches);
+    rads = zeros(npatches,1);
+    # FORTRAN get_centroid_rads(int[1] npatches,int[npatches] norders,int[npp1] ixyzs,int[npatches] iptype,int[1] npts,double[n9,npts] srccoefs,inout double[n3,npatches] cms,inout double[npatches] rads);
+
+    rad_near = rads*rfac;
+    nnz = 0;
+    # FORTRAN findnearmem(double[n3,npatches] cms,int[1] npatches,double[npatches] rad_near,int[1] ndtarg,double [ndtarg,ntarg] targs,int[1] ntarg,inout int[1] nnz);
+
+    row_ptr = zeros(ntarg+1,1);
+    col_ind = zeros(nnz,1);
+    ntp1 = ntarg+1;
+    nnzp1 = nnz+1;
+    # FORTRAN findnear(double[n3,npatches] cms,int[1] npatches,double[npatches] rad_near,int[1] ndtarg,double [ndtarg,ntarg] targs, int[1] ntarg,inout int[ntp1] row_ptr,inout int[nnz] col_ind); 
+
+    iquad = zeros(nnz+1,1);
+    # FORTRAN get_iquad_rsc(int[1] npatches,int[npp1] ixyzs,int[1] npts,int[1] nnz,int[ntp1] row_ptr,int[nnz] col_ind,inout int[nnzp1] iquad);
+
+    nquad = iquad(nnz+1)-1;
+    iquadtype = 1;
+    if(isfield(opts,'quadtype'))
+      if(strcmpi(opts.quadtype,'ggq'))
+         iquadtype = 1;
+      else
+        fprintf('Unsupported quadrature type, reverting to ggq\n');
+        iquadtype = 1;
+      end
+    end
+
+    int_rep = 'nrccie';
+    if isfield(opts,'int_rep')
+      int_rep = opts.int_rep;
+    end
+
+% Initialize common part of quadrature correction struct    
+    Q = [];
+    Q.targinfo = targinfo;
+    Q.ifcomplex = 1;
+    Q.wavenumber = zpars(1);
+    Q.kernel_order = -1;
+    Q.rfac = rfac;
+    Q.nquad = nquad;
+    Q.format = ff;
+
+    if(strcmpi(ff,'rsc'))
+        Q.iquad = iquad;
+        Q.row_ptr = row_ptr;
+        Q.col_ind = col_ind;
+    elseif(strcmpi(ff,'csc'))
+        col_ptr = zeros(npatches+1,1);
+        row_ind = zeros(nnz,1);
+        iper = zeros(nnz,1);
+        npatp1 = npatches+1;
+        # FORTRAN rsc_to_csc(int[1] npatches, int[1] ntarg, int[1] nnz, int[ntp1] row_ptr, int[nnz] col_ind, inout int[npatp1] col_ptr, inout int[nnz] row_ind, inout int[nnz] iper); 
+        Q.iquad = iquad;
+        Q.iper = iper;
+        Q.col_ptr = col_ptr;
+        Q.row_ind = row_ind;
+     endif
+
+
+    if strcmpi(int_rep,'nrccie')
+       wnear = complex(zeros(nquad,9));
+       # FORTRAN getnearquad_em_nrccie_pec(int[1] npatches, int[npatches] norders, int[npp1] ixyzs, int[npatches] iptype, int[1] npts, double[n9, npts] srccoefs, double[n12, npts] srcvals, int[1] ndtarg, double[ndtarg, ntarg] targs, int[ntarg]  patch_id, double[2, npts] uvs_targ, double[1] eps, dcomplex[2] zpars, int[1] iquadtype, int[1] nnz, int[ntp1] row_ptr, int[nnz] col_ind, int[nnzp1] iquad, double[1] rfac0, int[1] nquad, dcomplex[nquad,9] wnear);
+       Q.kernel_order = 0;
+       Q.nker = 9;
+    end
+
+    if(strcmpi(ff,'rsc'))
+        Q.iquad = iquad;
+        Q.wnear = wnear;
+        Q.row_ptr = row_ptr;
+        Q.col_ind = col_ind;
+    elseif(strcmpi(ff,'csc'))
+        col_ptr = zeros(npatches+1,1);
+        row_ind = zeros(nnz,1);
+        iper = zeros(nnz,1);
+        npatp1 = npatches+1;
+        # FORTRAN rsc_to_csc(int[1] npatches, int[1] ntarg, int[1] nnz, int[ntp1] row_ptr, int[nnz] col_ind, inout int[npatp1] col_ptr, inout int[nnz] row_ind, inout int[nnz] iper); 
+        Q.iquad = iquad;
+        Q.iper = iper;
+        Q.wnear = wnear;
+        Q.col_ptr = col_ptr;
+        Q.row_ind = row_ind;
+    else
+        spmat = conv_rsc_to_spmat(S,row_ptr,col_ind,wnear);
+        Q.spmat = spmat;
+    end
+    
+
+    
+end
+%
+%
+%
+%
+%-------------------------------------------------
+%
+
