--- a/AUTHORS
+++ b/AUTHORS
@@ -1,13 +1,17 @@
 fmm3dbie development team
 
+Travis Askham
 Leslie Greengard 
+Jeremy Hoskins
+Libin Lu
 Michael O'Neil
 Manas Rachh
-Felipe Vico
-Libin Lu
-Travis Askham
-Jeremy Hoskins
 Vladimir Rokhlin
+Felipe Vico
+
+
+The contributions of Leslie Greengard, Libin Lu, and 
+Manas Rachh are works made for hire for The Simons Foundation, Inc.
 
 Other contributors
 
