--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,6 +1,7 @@
 @article{fmm3d,
-  title={fmm3D documentation. Release 0.1.0.},
-  author={Gimbutas, Zydrunas and Greengard, Leslie and Magland, Jeremy and Rachh, Manas and Rokhlin, Vladimir},
+  title={fmm3D documentation. Release 1.0.0.},
+  author={Askham, Travis and Gimbutas, Zydrunas and Greengard, Leslie and Lu, Libin and Magland, Jeremy and Malhotra, Dhairya and O'Neil, Mike and Rachh, Manas and Rokhlin, Vladimir and Vico, Felipe},
+  year={2024},
   journal={Online: https://github.com/flatironinstitute/FMM3D}
 }
 
@@ -11,6 +12,27 @@
   volume={10},
   pages={100092},
   year={2021},
+  publisher={Elsevier}
+}
+
+@article{bremer2013numerical,
+  title={On the numerical evaluation of the singular integrals of scattering theory},
+  author={Bremer, James and Gimbutas, Zydrunas},
+  journal={Journal of Computational Physics},
+  volume={251},
+  pages={327--343},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{xiao2010numerical,
+  title={A numerical algorithm for the construction of efficient quadrature rules in two and higher dimensions},
+  author={Xiao, Hong and Gimbutas, Zydrunas},
+  journal={Computers \& mathematics with applications},
+  volume={59},
+  number={2},
+  pages={663--676},
+  year={2010},
   publisher={Elsevier}
 }
 
