better error handling in matlab interface for surface smoohter

--- a/matlab/fmm3dbie_routs.mw
+++ b/matlab/fmm3dbie_routs.mw
@@ -109,9 +109,10 @@ function S = multiscale_mesher(fnamein, norder, opts)
     ier = 0;
     # MWF77_multiscale_mesher(cstring[1000] fnameuse, int[1] ifiletype, int[1] norder_skel, int[1] norder_smooth, int[1] nrefine, int[1] adapt_sigma, double[1] rlam, cstring[1000] fnameoutuse, inout int[1] ier);
 
-    if ier > 0
+    if ier == 3 || ier == 4
         error_message = ['MULTISCALE_MESHER: error in main smoothing routine', ...
-                'try a different value of rlam, nrefine\n' ...
+                'try a larger value of rlam (if not set, use opts.rlam and set it to ',...
+                'a value greater than 10)\n' ...
                 'if that does not work, then mesh cannot be smooth with the surface smoother\n'];
         error(error_message);
     end
